--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,15 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
-            "type": "cppdbg",
+            "name": "Debug",
+            "type": "cpp",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
             "args": [],
-            "stopAtEntry": true, // 프로그램 시작 시 멈추게 설정
-            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
             "environment": [],
-            "externalConsole": true,
-            "MIMode": "gdb",
-            "miDebuggerPath": "C:\\mingw64\\mingw64\\bin\\gdb.exe"
+            "externalConsole": true
         }
     ]
 }
